used classes instead of simple constructor

--- a/index.html
+++ b/index.html
@@ -40,12 +40,14 @@
   <script>
     let myLibrary = [];
 
-    function Book(title, author, numberOfPages, readStatus) {
+    class Book {
+    constructor (title, author, numberOfPages, readStatus) {
       this.title = title;
       this.author = author;
       this.numberOfPages = numberOfPages;
       this.readStatus = readStatus;
     }
+  }
 
     function addBookToLibrary() {
       title = document.getElementById("titleId").value;
